Fix glob resolution for relative paths on Windows and WSL